@@ -1268,8 +1268,12 @@ public class Http2SolrClient extends SolrClient {
       sslContextFactory.setTrustStoreType(System.getProperty("javax.net.ssl.trustStoreType"));
     }
 
-    sslContextFactory.setEndpointIdentificationAlgorithm(
-        System.getProperty("solr.jetty.ssl.verifyClientHostName"));
+    String endpointIdentificationAlgorithm = "HTTPS";
+    // Check if TLS is enabled before trying to disable verify client host name
+    if (null != System.getProperty("solr.jetty.https.port")) {
+      endpointIdentificationAlgorithm = System.getProperty("solr.jetty.ssl.verifyClientHostName");
+    }
+    sslContextFactory.setEndpointIdentificationAlgorithm(endpointIdentificationAlgorithm);
 
     return sslContextFactory;
   }
